course routes finished, payment routes pending, user routes finished

--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,17 @@
 PORT=8000
 MONGO_URI=mongodb://localhost:27017/courseuploader
+FRONTEND_URL=http://localhost:3000
 JWT_SECRET=sdksdjksjdkjsdkjsdl
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=d3c466af3b40b3
+SMTP_PASS=f60728cc70514d
+
+CLOUDINARY_CLIENT_NAME=sumanthpweb11
+CLOUDINARY_CLIENT_API=527617333953229
+CLOUDINARY_CLIENT_SECRET=cpysucLo4lA0IJq3bKs9pRwnBqc
+
+PLAN_ID=plan_KmgzibnVTwPUrE
+RAZORPAY_API_KEY=rzp_test_tizpsZVr5i363N
+RAZORPAY_API_SECRET=ZrDAcOoUVF7kd30J4TywawOi
