payment routes completed, subscription routes, gitignore

--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,5 @@
 PORT=8000
-MONGO_URI=mongodb://localhost:27017/courseuploader
+MONGO_URI=mongodb+srv://sumanthp:bechavic@cluster0.s7sfj0n.mongodb.net/mernSubscription?retryWrites=true
 FRONTEND_URL=http://localhost:3000
 JWT_SECRET=sdksdjksjdkjsdkjsdl
 
@@ -15,3 +15,7 @@ CLOUDINARY_CLIENT_SECRET=cpysucLo4lA0IJq3bKs9pRwnBqc
 PLAN_ID=plan_KmgzibnVTwPUrE
 RAZORPAY_API_KEY=rzp_test_tizpsZVr5i363N
 RAZORPAY_API_SECRET=ZrDAcOoUVF7kd30J4TywawOi
+
+REFUND_DAYS=7
+
+MY_MAIL=forestroad06@gmail.com
