--- a/config/config.env
+++ b/config/config.env
@@ -6,7 +6,7 @@ JWT_SECRET=sdksdjksjdkjsdkjsdl
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=d3c466af3b40b3
-SMTP_PASS=f60728cc70514d
+SMTP_PASS=SMTP_PASS
 
 CLOUDINARY_CLIENT_NAME=sumanthpweb11
 CLOUDINARY_CLIENT_API=527617333953229
@@ -18,4 +18,4 @@ RAZORPAY_API_SECRET=ZrDAcOoUVF7kd30J4TywawOi
 
 REFUND_DAYS=7
 
-MY_MAIL=forestroad06@gmail.com
+MY_MAIL=sumanthprabhu11@gmail.com
