added smtp pass key

--- a/config/config.env
+++ b/config/config.env
@@ -6,7 +6,7 @@ JWT_SECRET=sdksdjksjdkjsdkjsdl
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=d3c466af3b40b3
-SMTP_PASS=SMTP_PASS
+SMTP_PASS=f60728cc70514d
 
 CLOUDINARY_CLIENT_NAME=sumanthpweb11
 CLOUDINARY_CLIENT_API=527617333953229
